--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="note_textSize">30sp</dimen>
     <dimen name="date_textSize">10sp</dimen>
     <dimen name="edit_textSize">20sp</dimen>
+    <dimen name="fragment_land_width">0dp</dimen>
+    <dimen name="frame_land_width">0dp</dimen>
 </resources>
