--- a/app/src/main/res/layout-land/activiti_land_main.xml
+++ b/app/src/main/res/layout-land/activiti_land_main.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:ignore="MissingDefaultResource"
-    android:baselineAligned="false">
+    android:orientation="horizontal">
 
     <fragment
         android:id="@+id/list_notes"
