--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="edit_textSize">20sp</dimen>
     <dimen name="fragment_land_width">0dp</dimen>
     <dimen name="frame_land_width">0dp</dimen>
+    <dimen name="nav_header_height">200dp</dimen>
+    <dimen name="nav_header_dimen">22sp</dimen>
 </resources>
