--- a/app/src/main/res/menu/popup.xml
+++ b/app/src/main/res/menu/popup.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title = "@string/add"
-        android:id = "@+id/item1_popup"
-        android:orderInCategory = "10" />
+        android:title = "@string/clear"
+        android:id = "@+id/clear"
+        android:orderInCategory = "25" />
     <item
         android:title = "@string/change"
         android:id = "@+id/change"
         android:orderInCategory = "15" />
     <item
         android:title = "@string/delete"
-        android:id = "@+id/item2_popup"
+        android:id = "@+id/delete"
         android:orderInCategory = "20" />
 </menu>
